# telegram_bot_api_rs

./: Cargo.toml  Readme.md
examples/: print_update.rs  send_message.rs
src/: available_types.rs  bot.rs  lib.rs  utils.rs
src/available_methods/: mod.rs  payload.rs
src/games/: mod.rs  payload.rs  types.rs
src/getting_updates/: mod.rs  payload.rs  types.rs  webhook.rs
src/inline_mode/: mod.rs  payload.rs  resp.rs  types.rs
src/payments/: mod.rs  payload.rs  types.rs
src/stickers/: mod.rs  payload.rs  types.rs
src/telegram_passport/: mod.rs  payload.rs  types.rs
src/updateing_messages/: mod.rs  payload.rs
